fix wind ring alignment

--- a/src/components/AirQualityDisplay.css
+++ b/src/components/AirQualityDisplay.css
@@ -2,11 +2,10 @@
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	/* border: 2px dashed yellow; */
 	justify-content: space-evenly;
 	align-items: center;
 	gap: 20px;
-	width: 20vw;
+	width: 24vw;
 }
 
 .air-quality-wrapper {
