--- a/src/components/SunriseSunsetDisplay.css
+++ b/src/components/SunriseSunsetDisplay.css
@@ -4,6 +4,7 @@
 	justify-content: space-evenly;
 	align-items: center;
 	height: 5vh;
+	width: max-content;
 }
 
 .sunrise-sunset-separator {
@@ -22,6 +23,16 @@
 	gap: 10px;
 	/* margin: 0; */
 	font-size: 2em;
+}
+
+.bi-sunrise-fill,
+.bi-sunset {
+	margin: 0 0 0 20px;
+}
+
+.sunrise-time,
+.sunset-time {
+	margin: 0 20px 0 0;
 }
 
 i,
