--- a/src/components/TemperatureDisplay.css
+++ b/src/components/TemperatureDisplay.css
@@ -3,8 +3,9 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
+	align-items: center;
 	height: 80%;
-	width: max-content;
+	width: 24vw;
 }
 
 .air-temp-info-wrapper {
